# Hackathon-Project

./: main.py  pyproject.toml  read.me
constants/: button_shape_theme.py  button_theme.py  color_theme.py  font_theme.py  label_theme.py  window_theme.py
services/: stock.py
widgets/: base_button.py  custom_label.py  entry.py  icon_button.py  text_button.py  ticker_graph.py
